--- a/FAQ/configs/spider_settings.yaml
+++ b/FAQ/configs/spider_settings.yaml
@@ -1,11 +1,10 @@
 # Spider.yaml
-USER_AGENT: 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/85.0.4183.102 Safari/537.36'
+USER_AGENT: "Scrapy/VERSION (+https://scrapy.org)"
 ROBOTSTXT_OBEY: True
-COOKIES_ENABLED: False
-AJAXCRAWL_ENABLED: True
+COOKIES_ENABLED: True
 LOG_ENABLED: False
-DOWNLOAD_DELAY: 0
-CONCURRENT_REQUESTS: 100
+DOWNLOAD_DELAY: 2
+CONCURRENT_REQUESTS: 16
 RETRY_ENABLED: True
 DOWNLOAD_TIMEOUT: 15
 REDIRECT_ENABLED: True
